[gd_scene load_steps=9 format=3 uid="uid://bbwenmdqnatkb"]

[ext_resource type="Script" path="res://main.gd" id="1_1ce2o"]
[ext_resource type="PackedScene" uid="uid://btv7jq1mwn3vw" path="res://wall.tscn" id="1_mktae"]
[ext_resource type="PackedScene" uid="uid://bq8265toxmcqh" path="res://ball.tscn" id="2_xotb5"]
[ext_resource type="PackedScene" uid="uid://cw52elds5h8mr" path="res://moving_wall.tscn" id="3_vgts4"]
[ext_resource type="PackedScene" uid="uid://bpmk1aisafyh6" path="res://hud.tscn" id="5_y4mhn"]
[ext_resource type="PackedScene" uid="uid://3whjj11f4c4v" path="res://brick_marker.tscn" id="6_48tf4"]
[ext_resource type="PackedScene" uid="uid://bal10sqwhvuwn" path="res://brick.tscn" id="6_o8ws1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m740m"]
size = Vector2(1024, 184)

[node name="Main" type="Node"]
script = ExtResource("1_1ce2o")
ball_scene = ExtResource("2_xotb5")
brick_scene = ExtResource("6_o8ws1")

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Wall" parent="." instance=ExtResource("1_mktae")]

[node name="MovingWall" parent="." instance=ExtResource("3_vgts4")]
position = Vector2(568, 632)
speed = 400

[node name="KillArea" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillArea"]
position = Vector2(576, 744)
shape = SubResource("RectangleShape2D_m740m")

[node name="HUD" parent="." instance=ExtResource("5_y4mhn")]

[node name="Balls" type="Node" parent="."]

[node name="Marker2D" type="Marker2D" parent="Balls"]
position = Vector2(576, 328)

[node name="Bricks" type="Node" parent="."]

[node name="BrickMarker" parent="Bricks" instance=ExtResource("6_48tf4")]
position = Vector2(256, 192)

[node name="BrickMarker2" parent="Bricks" instance=ExtResource("6_48tf4")]
position = Vector2(304, 160)

[node name="BrickMarker3" parent="Bricks" instance=ExtResource("6_48tf4")]
position = Vector2(352, 192)

[node name="BrickMarker4" parent="Bricks" instance=ExtResource("6_48tf4")]
position = Vector2(400, 160)

[node name="BrickMarker5" parent="Bricks" instance=ExtResource("6_48tf4")]
position = Vector2(448, 192)

[node name="BrickMarker6" parent="Bricks" instance=ExtResource("6_48tf4")]
position = Vector2(496, 160)

[node name="BrickMarker7" parent="Bricks" instance=ExtResource("6_48tf4")]
position = Vector2(544, 192)

[node name="BrickMarker8" parent="Bricks" instance=ExtResource("6_48tf4")]
position = Vector2(592, 160)

[node name="BrickMarker9" parent="Bricks" instance=ExtResource("6_48tf4")]
position = Vector2(640, 192)

[node name="BrickMarker10" parent="Bricks" instance=ExtResource("6_48tf4")]
position = Vector2(688, 160)

[node name="BrickMarker11" parent="Bricks" instance=ExtResource("6_48tf4")]
position = Vector2(736, 192)

[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="body_entered" from="KillArea" to="." method="_on_kill_area_body_entered"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
